<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        android:translationY="-100dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="true"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/erro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/submitLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:text="@string/bt_submit_login"
        />

</LinearLayout>