<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskInfo"
    android:background="@drawable/wave_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HeaderInfo"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:textSize="30dp"
            ></TextView>

        <EditText
            android:id="@+id/titleAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="75dp"
            android:hint="@string/titleAdd">
        </EditText>
        <EditText
            android:id="@+id/dateAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="25dp"
            android:hint="@string/dateAdd">
        </EditText>
        <EditText
            android:id="@+id/descriptionAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="25dp"
            android:height="120dp"
            android:gravity="top|start"
            android:hint="@string/descriptionAdd">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChooseState"
            android:textColor="@color/orange"
            android:textAllCaps="true"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="19dp"
            ></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btTODO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:text="@string/todo">

            </Button>
            <Button
                android:id="@+id/btDOING"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="@string/doing">

            </Button>
            <Button
                android:id="@+id/btDONE"
                android:backgroundTint="@color/ciane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done">

            </Button>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:text="@string/stateAdd"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textStyle="bold"></TextView>
        <TextView
            android:id="@+id/currentState"
            android:textColor="@color/orange"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"></TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:gravity="center">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/seetasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_notes_24"
            android:background="@null"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/changetask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_check_24"
            android:background="@null"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/deletetask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_delete_24"
            android:background="@null"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>