<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Task"
    android:background="@drawable/wave_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HeaderInsert"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:textSize="30dp"></TextView>

        <EditText
            android:id="@+id/titleAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:backgroundTint="@color/orange"
            android:hint="@string/titleAdd">
        </EditText>
        <EditText
            android:id="@+id/dateAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/orange"
            android:hint="@string/dateAdd">
        </EditText>
        <EditText
            android:id="@+id/descriptionAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="120dp"
            android:gravity="top|start"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="25dp"
            android:hint="@string/descriptionAdd">
        </EditText>

        <Spinner
            android:id="@+id/spinnerState"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="24dp"

            />

        <Button
            android:id="@+id/btinsertTask"
            android:layout_width="250dp"
            android:layout_gravity="center|bottom"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:text="@string/bt_insertTask"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_marginTop="90dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:gravity="center">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/seetasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_notes_24"
            android:background="@null"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addtask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_24"
            android:background="@null"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/exitapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_exit_to_app_24"
            android:background="@null"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>